# cli_metrics

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
sysdash/: __init__.py  cli.py  cli_mini.py  collector.py
