[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sysdash"
version = "1.0.0"
description = "Real-time terminal-based system monitoring dashboard with graphs"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "THULASIRAM K", email = "kthulasiram231006@gmail.com"}
]
keywords = ["monitoring", "dashboard", "system", "cpu", "memory", "terminal", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "psutil>=5.9.0",
    "rich>=13.0.0",
]

[project.scripts]
sysdash = "sysdash.cli:main"
sysdash-mini = "sysdash.cli_mini:main"

[project.urls]
Homepage = "https://github.com/yourusername/sysdash"
Repository = "https://github.com/yourusername/sysdash"
Issues = "https://github.com/yourusername/sysdash/issues"
